13/04/2015 - 1.6.4  - Fenix           - changed database column CID to VARCHAR(32) to support Frostbite games
17/03/2015 - 1.6.3  - 82ndab.Bravo17  - escape ' characters when updating current_clients table
16/02/2015 - 1.6.2  - 82ndab.Bravo17  - Set default score to zero
04/02/2015 - 1.6.1  - Fenix           - fixed exception being generated when not using database to store status information
05/01/2014 - 1.6    - Fenix           - PostgreSQl support
30/08/2014 - 1.5    - Fenix           - syntax cleanup
                                      - make use of the new onStop event handler
13/03/2014 - 1.4.18 - Fenix           - double check for server and client vars table to exists before attempting to create
                                      - use the correct data type for 'Updated' column
                                      - enforce database tables drop->create so we do not have to bother with schema updates
                                      - minor bugfixes
28/23/2013 - 1.4.17 - Courgette       - close ftp connection
30/11/2013 - 1.4.16 - Courgette       - save status info to database by default
24/11/2013 - 1.4.15 - Fenix           - improved plugin configuration file loading
                                      - PEP8 coding standards
22/02/2013 - 1.4.14 - Courgette       - fix the sanitize bug
10/02/2013 - 1.4.13 - Courgette       - add log message with more precise info when failing to sanitize data
26/10/2012 - 1.4.12 - Courgette       - makes sure 'Client' tags have a 'score' attribute
                                      - better sync of DB and XML saving for XLRstats v3 webfront
12/08/2012 - 1.4.11 - Courgette       - will provide more debugging info about errors while generating the XML document
05/05/2012 - 1.4.10 - Courgette       - fixes reading config options 'svar_table' and 'client_table'
19/07/2011 - 1.4.9  - Freelander      - fix errors during map change