@@ -1,3 +1,4 @@
+14/06/2015 - 1.6.5  - Fenix           - implement missing onStartup method
 13/04/2015 - 1.6.4  - Fenix           - changed database column CID to VARCHAR(32) to support Frostbite games
 17/03/2015 - 1.6.3  - 82ndab.Bravo17  - escape ' characters when updating current_clients table
 16/02/2015 - 1.6.2  - 82ndab.Bravo17  - Set default score to zero
